--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -38,6 +38,7 @@
       letter-spacing: 2px;
       color: var(--secondary-color);
       background-color: var(--main-white);
+      display: inline-block;
       padding: 0.5rem 1rem;
       border-radius: 2px;
       font-weight: 100;
